Sandbox/07-02-2025/force-app/main/default/objects/Usage_Summary__c/fields/Advertiser_Seat_Name__c.field-meta.xml
<CustomField>
    <fullName>Advertiser_Seat_Name__c</fullName>
    <label>Advertiser Seat Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>