Sandbox/07-02-2025/force-app/main/default/objects/Usage_Summary__c/fields/Billing_Account__c.field-meta.xml
<CustomField>
    <fullName>Billing_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Billing Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Usage Summary (Billing Account)</relationshipLabel>
    <relationshipName>Usage_Summary3</relationshipName>
    <type>Lookup</type>
</CustomField>