Sandbox/07-02-2025/force-app/main/default/objects/Usage_Summary__c/fields/Billing_Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Billing_Account_Name__c</fullName>
    <label>Billing Account Name</label>
    <length>250</length>
    <type>Text</type>
</CustomField>