Sandbox/07-02-2025/force-app/main/default/objects/Usage_Summary__c/fields/Target_Country_Code__c.field-meta.xml
<CustomField>
    <fullName>Target_Country_Code__c</fullName>
    <label>Target Country Code</label>
    <length>100</length>
    <type>Text</type>
</CustomField>