Sandbox/07-02-2025/force-app/main/default/objects/Usage_Summary__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Revenue_Type__c</columns>
    <columns>Billing_Account__c</columns>
    <columns>Buyer_Country__c</columns>
    <columns>Client_Account__c</columns>
    <columns>Revenue__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Revenue_Type__c</field>
        <operation>equals</operation>
        <value>Flat-Fee</value>
    </filters>
    <label>All</label>
</ListView>